# ServerHub

./: .dockerignore  .env.example  .gitignore  .npmrc  Cargo.toml  README.md  build.rs  nixpacks.toml  nx.json  package.json  pnpm-lock.yaml  test.db
.github/workflows/: docker.yml  release.yml
api/: Cargo.toml
api/src/: lib.rs
dao/: Cargo.toml
deploy/: .env.example  docker-compose.yml  dynamic_conf.yaml  traefik.yml
docker/: Dockerfile.auth  Dockerfile.client  Dockerfile.server  Dockerfile.storage  Dockerfile.view  docker-compose.yml  dynamic_conf.yaml  traefik.yml
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  roles.rs  user.rs  user_roles.rs
entity/src/rbac/: mod.rs  permissions.rs  role_permissions.rs  roles.rs  user_roles.rs  users.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_create_users.rs  m20230319_114805_create_roles.rs  m20230319_115123_create_user_roles.rs
migration/src/rbac/: m20230319_114805_roles.rs  m20230319_115123_user_roles.rs  m20230319_164717_permissions.rs  m20230319_165023_role_permissions.rs  mod.rs
scripts/: clean.js  versionToDev.js  versionToProd.js
src/: main.rs
