[package]
name = "server-octopus-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" } # depends on your needs
actix-http = "3"
actix-rt = "2.7"
actix-service = "2"
actix-web = "4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1"
dotenvy = "0.15"


[dependencies.sea-orm]
version = "^0"
features = []
